--- a/TODO
+++ b/TODO
@@ -1,6 +1,10 @@
 == GENERAL ==
-[done] Quit app by pressing ESC(ape)
+[done] Quit app by pressing ESC(ape) but if search is active clear it first (needs pressing ESC twice to quit app)
+- More control by keyboard (e.g. selecting and starting application by arrow keys and ENTER)
 - Store settings, e.g. quicklaunch shortcuts, in Xfconf4 and listen for updates
+- Start search for application ca. one second after entering and restart search one second after last input in a thread?
+- Sort search result in search view alphabetically and/or by relevance?
+- Effects?
 - Themable?
 
 == QUICKLAUNCH-BOX (FAVOURITES-SELECTOR) ==
@@ -38,8 +42,10 @@
 - Allow drag-n-drop of application icon to workspace-box and start application on this workspace
 
 == SEARCH VIEW ==
-- Implement search view
-- Implement search input box
-- Start search for application ca. one second after entering and restart search one second after last input
+[done] - Implement search view
+[done] - Implement search input box
+[done] - Switch to search view on non-empty search term (that means search started)
+[done] - Merge search view with applications view (search view will be removed and impleted as filter in applications view)
+[done] - Switch back to previous view if search term is empty (that means search has ended)
 - Allow drag-n-drop of application icon to quicklaunch-box and create shortcut
 - Allow drag-n-drop of application icon to workspace-box and start application on this workspace
