--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 == GENERAL ==
+[partial] Migrate fully to autotools build system
 [done] Quit app by pressing ESC(ape) but if search is active clear it first (needs pressing ESC twice to quit app)
 - More control by keyboard (e.g. selecting and starting application by arrow keys and ENTER)
 [done] - Store settings, e.g. quicklaunch shortcuts, in Xfconf4 and listen for updates
