--- a/TODO
+++ b/TODO
@@ -1,10 +1,10 @@
 == GENERAL ==
-[partial] Migrate fully to autotools build system
+[done] Migrate fully to autotools build system
 [done] Quit app by pressing ESC(ape) but if search is active clear it first (needs pressing ESC twice to quit app)
 - More control by keyboard (e.g. selecting and starting application by arrow keys and ENTER)
 [done] - Store settings, e.g. quicklaunch shortcuts, in Xfconf4 and listen for updates
 [done] - Only run one instance (libunique? GApplication?)
-
+- Localization
 - Start search for application ca. one second after entering and restart search one second after last input in a thread?
 - Sort search result in search view alphabetically and/or by relevance?
 - Effects?
@@ -13,8 +13,9 @@
 == QUICKLAUNCH-BOX (FAVOURITES-SELECTOR) ==
 [done] Implement quicklaunch-box
 [done] Clicking quicklaunch icon starts application and quits
-- Allow drag-n-drop of quicklaunch icon to windows-list view and start app in current workspace and quit
-- Allow drag-n-drop of quicklaunch icon to workspace-box, start app in this workspace and quit
+[done] Reorder quicklaunch icon by drag-n-drop
+- Allow drag-n-drop of quicklaunch icon to windows-list view and start app in current workspace
+- Allow drag-n-drop of quicklaunch icon to workspace-box, start app in this workspace
 
 == WORKSPACE-BOX (WORKSPACE-SELECTOR) ==
 - Implement workspace-box
