--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 == GENERAL ==
+- Make drag'n'drop code compatible with Clutter 1.10+ (does not recognize start of drag and therefore does nothing)
 [done] Migrate fully to autotools build system
 [done] Quit app by pressing ESC(ape) but if search is active clear it first (needs pressing ESC twice to quit app)
 - More control by keyboard (e.g. selecting and starting application by arrow keys and ENTER)
