--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@
 [done] Migrate fully to autotools build system
 - Quit app by pressing ESC(ape) but if search is active clear it first (needs pressing ESC twice to quit app)
 - More control by keyboard (e.g. selecting and starting application by arrow keys and ENTER)
-- Store settings, e.g. quicklaunch shortcuts, in Xfconf4 and listen for updates
+[prepared] Store settings, e.g. quicklaunch shortcuts, in Xfconf4 and listen for updates
 [done] Only run one instance (libunique? GApplication?)
 [done] Localization
 - Search should be non-blocking (but workaround: still blocking but speed up a lot)
@@ -26,10 +26,10 @@
 - Mouse-wheel on workspace-actor switches workspace without quitting but updating windows-list view
 
 == VIEWPAD (VIEW AGGREGATOR) ==
-[wip] - Implement viewpad
+[done] Implement viewpad
 - view-selector: For each view create a button to switch to this view (may be replace with "view button" in quicklaunch)
 - Implement "view button" as first icon in quicklaunch
-- Scroll bars should be shown or hidden automatically depending on if view fits the space in this direction
+[done] Scroll bars should be shown or hidden automatically depending on if view fits the space in this direction
 
 == WINDOWS-LIST VIEW ==
 [done] Implement windows-list view
