--- a/TODO
+++ b/TODO
@@ -5,7 +5,7 @@
 [prepared] Store settings, e.g. quicklaunch shortcuts, in Xfconf4 and listen for updates
 [done] Only run one instance (libunique? GApplication?)
 [done] Localization
-[done] - Get rid of duplicates in application search view/provider
+[done] Get rid of duplicates in application search view/provider
 - Implement search provider manager and search provider abstract class to collect result from many and different sources (not only applications)
 - Implement application search provider as built-in
 - Search should be non-blocking (but workaround: still blocking but speed up a lot)
