--- a/TODO
+++ b/TODO
@@ -16,10 +16,10 @@
 
 == QUICKLAUNCH-BOX (FAVOURITES-SELECTOR) ==
 [done] Implement quicklaunch-box
-[done] - Allow orientation (horizontal or vertical) in quicklaunch
+[done] Allow orientation (horizontal or vertical) in quicklaunch
 [done] Clicking quicklaunch icon starts application and quits
-- Reorder quicklaunch icon by drag-n-drop
-- Remove quicklaunch icon by drag-n-drop to trash icon in quicklaunch
+[done] Reorder quicklaunch icon by drag-n-drop
+[done] Remove quicklaunch icon by drag-n-drop to trash icon in quicklaunch
 - Allow drag-n-drop of quicklaunch icon to windows-list view and start app in current workspace
 - Allow drag-n-drop of quicklaunch icon to workspace-box, start app in this workspace
 
