--- a/TODO
+++ b/TODO
@@ -38,23 +38,23 @@
 [done] Click live-window actor
 [done] Lazy initialization by getting rid of blocking sync of libwnck and listening to signals
 [prepared] Multi-monitor support (show visible windows on the screen where it belongs to, fullscreen over all screens)
-[done] - Allow closing window by clicking "X" button of live-window actor
+[done] Allow closing window by clicking "X" button of live-window actor
 - Allow drag-n-drop of live-window actor to quicklaunch-box view and create shortcut
 - Allow drag-n-drop of live-window actor to another workspace by dropping window in workspace-box
-[done] - React on new window appearing by creating a live-window actor for it
-[done] - React on window disappearing by destroying appropiate live-window actor
+[done] React on new window appearing by creating a live-window actor for it
+[done] React on window disappearing by destroying appropiate live-window actor
 
 == APPLICATION-MENU VIEW ==
-[done] - Implement application-menu view
-[done] - Start application when clicked on application icon in view
+[done] Implement application-menu view
+[done] Start application when clicked on application icon in view
 - Allow drag-n-drop of application icon to quicklaunch-box view and create shortcut
 - Allow drag-n-drop of application icon to workspace-box and start application on this workspace
 
 == SEARCH VIEW ==
-[done] - Implement search view
-[done] - Implement search input box
-[done] - Switch to search view on non-empty search term (that means search started)
-[done] - Switch back to previous view if search input box is empty (that means search has ended)
+[done] Implement search view
+[done] Implement search input box
+[done] Switch to search view on non-empty search term (that means search started)
+[done] Switch back to previous view if search input box is empty (that means search has ended)
 - Support search provider manager
 - Support grouping of results by search providers
 - Allow drag-n-drop of application icon to quicklaunch-box and create shortcut
